[package]
name = "mesh_builder_wasm"
version = "0.1.0"
edition = "2021"
authors = ["Harrison"]
description = "High-performance WASM mesh builder for voxel geometry merging"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

# The `console_error_panic_hook` crate provides better debugging of panics
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
